# CPP-DevicesManager

./: CMakeLists.txt  README.md  main.cpp
Device/: Device.cpp  Device.hpp  DeviceAddress.cpp  DeviceAddress.hpp  DeviceList.cpp  DeviceList.hpp
Menu/: Action.cpp  Action.hpp  ExitMenuAction.cpp  ExitMenuAction.hpp  Menu.cpp  Menu.hpp
